<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OnMyHand</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fondo">fondo de la aplicación</string>
    <string name="estadisticas">imagen para las estadisticas</string>
    <string name="productos">imagen de productos</string>
    <string name="promociones">imagen para las promociones</string>
    <string name="ventas">imagen para las ventas</string>
    <string name="labelAgregarProducto">Nombre: </string>
    <string name="title_activity_carrito_de_venta">Detalle del Gasto</string>
    <string name="Editar">Editar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="title_activity_list">Lista de Gastos</string>
    <string name="title_activity_agregar_producto">Agregar Gasto</string>
    <string name="title_activity_historial_ventas">Historial de Ventas</string>
    <string name="crear_reporte">Exportar Reporte</string>
    <string name="archive_month">Archivar mes</string>
    <string name="error_tittle">Error</string>
    <string name="success_tittle">Información</string>
    <string name="success_report">Reporte generado satisfactoriamente en la ruta: %s</string>


    <!--Agregar producto-->
    <string name="nombre_item">Nombre: </string>
    <string name="titulo_agregar_item">Agregar Gasto</string>
    <string name="posicion">Estimado: </string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar_item_gasto">Agregar Item Gasto</string>
    <string name="cerrar_detalle">Cerrar</string>
    <string name="tittle_detalle_gasto">Detalle</string>
    <string name="title_activity_agregar_item_gasto">Agregar gasto</string>
    <string name="titulo_agregar_item_gasto">Agregar Item</string>
    <string name="valor">Valor:</string>
    <string name="ingresos">Retiros: </string>
    <string name="gastos">Gastos: </string>
    <string name="total">Total: </string>
    <string name="estimado">Estimado: %s</string>
    <string name="real">Real: %s</string>
    <string name="disponible">Disponible: %s</string>

    <!--Excepciones-->
    <string name="storage_is_not_writable">No se ha permitido la escritura en memoria</string>
    <string name="report_error_message">Error escribiendo el reporte en la memoria</string>
    <string name="labReales">Datos Reales:</string>
    <string name="labEstimados">Datos Estimados:</string>
    <string name="total_disponible">Disponible:</string>
    <string name="orden">Orden:</string>
    <string name="is_virtual">Es un pago virtual?</string>
    <string name="salaryT">Salario: %s</string>
    <string name="salary">Ingresar Salario</string>
    <string name="cuenta">Banco: %s</string>
</resources>
